# dehancer-maths-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dehancer-maths-cpp.pc.in  version.txt
include/dehancer/: histogram.hpp  interpolator.hpp  math.hpp  matrix.hpp  properties.hpp  scope_guard.hpp  vectors.hpp
include/dehancer/details/: observable_array.hpp  optional.hpp
include/dehancer/spline/: bezier.hpp  bspline.hpp  catmul_rom.hpp  cubic.hpp  linear.hpp  matrix_based.hpp  utils.hpp
lib/: CMakeLists.txt
lib/cmake/: dehancer_maths_cpp.cmake
src/: bezier.cpp  histogram.cpp  interpolator.cpp  matrix_based.cpp  vectors.cpp
src/spline/: bezier.cpp  bspline.cpp  catmul_rom.cpp  cubic.cpp  linear.cpp  matrix_based.cpp  utils.cpp
tests/: CMakeCommon.in  CMakeLists.txt
tests/bezier/: CMakeLists.txt  bezier.cpp
tests/bspline/: CMakeLists.txt  bspline_test.cpp
tests/catmulrom/: CMakeLists.txt  catmulrom.cpp
tests/common/: matlab_utils.hpp
tests/cubic/: CMakeLists.txt  cubic.cpp
tests/initial/: CMakeLists.txt  initial.cc  initial.cpp
tests/interpolator/: CMakeLists.txt  interpolator.cpp
tests/vector/: CMakeLists.txt  vector.cpp
